Add blob deleting endpoint
