# main.go
@@ -52,6 +52,7 @@ func main() {
 
 	r.GET("/blobs", blobs.HandleListBlobs)
 	r.POST("/blobs", blobs.HandleCreateBlob)
+	r.DELETE("/blobs/:blob", blobs.HandleDeleteBlob)
 
 	r.Run(":8080")
 }
